--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ footer {
 /*Ingredients */
 
 .ingredients { 
-    background-color: rgb(231, 231, 231, 0.1);
+    background-color: rgb(231, 231, 231, 0.2);
     padding: 1em;
     display: block;
 
@@ -119,7 +119,7 @@ footer {
 /*Instructions */
 
 .instructions {
-    background-color: rgb(231, 231, 231, 0.1);
+    background-color: rgb(231, 231, 231, 0.2);
     padding: 1em;
     display: inline-block;
 }
@@ -127,7 +127,7 @@ footer {
 /*Nutritional Facts*/
 
 .nutrition {
-    background-color: rgb(231, 231, 231, 0.1);
+    background-color: rgb(231, 231, 231, 0.2);
     padding: 1em;
     display: inline-block;
     height: 150px;
@@ -241,10 +241,10 @@ a {
 }
 
 .social a {
-    color: black;
+    color: rgb(255, 255, 255);
 }
 .social a:hover {
-    color: white; 
+    color:black; 
 }
 
 
@@ -254,6 +254,7 @@ a {
     position: relative;
     margin-left: -2em;
     justify-content: space-evenly;
+    font-size: 15px;
 }
 
 .legal a {
